CSS: Corrected header width on mobile display

--- a/fcc/responsive_web_design/product_landing_page/style/style.css
+++ b/fcc/responsive_web_design/product_landing_page/style/style.css
@@ -281,7 +281,7 @@ footer svg {
     grid-template-areas: "logo"
                          "navigation";
     height: 15vh;
-    max-width: 375px;
+    max-width: 667px;
     width: 100vw;
   }
 
